<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_styles"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_styles"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/menu_color_text"
                android:title="@string/menu_color_text"/>
            <item
                android:id="@+id/menu_color_background"
                android:title="@string/menu_color_background"/>
            <item
                android:id="@+id/menu_font"
                android:title="@string/menu_font"/>
            <item
                android:id="@+id/menu_text"
                android:title="@string/menu_font"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_send"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/menu_send"/>

</menu>